todo list added

--- a/index.html
+++ b/index.html
@@ -175,47 +175,6 @@
     <div class="gallery container" id="gallery">
         <h3 class="heading">Portfolio</h3>
         <p>* flip and click *</p>
-        <h4>Java</h4>
-        <div class="row">
-            <div class="col-md-4 col-sm-6 gallery-frame">
-                <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/java">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/java.jpg" alt="a photo for java codes">
-                            </div>
-                            <div class="cardback">
-                                <h4>Java Codes</h4>
-                                <ul>
-                                    <li>Algorithm Snippets</li>
-                                    <li>Exercises on books</li>
-                                    <li>Personal Projects</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 gallery-frame">
-                <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/Calculator">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/Calculator.png" alt="a photo for calculator">
-                            </div>
-                            <div class="cardback">
-                                <h4>Calculator</h4>
-                                <ul>
-                                    <li>Two operands</li>
-                                    <li>Negative numbers</li>
-                                    <li>Operator changable</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
         <h4>JS HTML CSS</h4>
         <div class="row">
             <div class="col-md-4 col-sm-6 gallery-frame">
@@ -358,6 +317,27 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/php/todolist">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/todo.png" alt="a photo for Todo List">
+                            </div>
+                            <div class="cardback">
+                                <h4>Todo List</h4>
+                                <ul>
+                                    <li>PHP and MySQL</li>
+                                    <li>Fat Free and Twig</li>
+                                    <li>MVC and Router</li>
+                                    <li>Create complete and delete</li>
+                                    <li>User or Guest</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
                     <a target="_blank" href="https://github.com/elfwings/headlinenews">
                         <div class="card">
                             <div class="front">
@@ -371,6 +351,7 @@
                                     <li>MVC, Ajax, API</li>
                                     <li>Searh and Subscript</li>
                                     <li>Manager/User accounts</li>
+                                </ul>
                             </div>
                         </div>
                     </a>
@@ -397,6 +378,47 @@
                 </div>
             </div>
         </div>
+        <h4>Java</h4>
+        <div class="row">
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/java">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/java.jpg" alt="a photo for java codes">
+                            </div>
+                            <div class="cardback">
+                                <h4>Java Codes</h4>
+                                <ul>
+                                    <li>Algorithm Snippets</li>
+                                    <li>Exercises on books</li>
+                                    <li>Personal Projects</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/Calculator">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/Calculator.png" alt="a photo for calculator">
+                            </div>
+                            <div class="cardback">
+                                <h4>Calculator</h4>
+                                <ul>
+                                    <li>Two operands</li>
+                                    <li>Negative numbers</li>
+                                    <li>Operator changable</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
         <!-- gallery slide -->
         <div id="gallery-slider" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -411,6 +433,7 @@
                 <li data-target="#gallery-slider" data-slide-to="8"></li>
                 <li data-target="#gallery-slider" data-slide-to="9"></li>
                 <li data-target="#gallery-slider" data-slide-to="10"></li>
+                <li data-target="#gallery-slider" data-slide-to="11"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -550,6 +573,27 @@
                 <div class="carousel-item">
                     <div class="card-container">
                         <a target="_blank" href="https://wzlwit.github.io/elfwings/headlinenews">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/todo.png" alt="a photo for Todo List">
+                                </div>
+                                <div class="cardback">
+                                    <h4>HeadLineNews</h4>
+                                    <ul>
+                                        <li>PHP and MySQL</li>
+                                        <li>Fat Free and Twig</li>
+                                        <li>MVC and Router</li>
+                                        <li>Create complete and delete</li>
+                                        <li>User or Guest</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://github.com/elfwings/headlinenews">
                             <div class="card">
                                 <div class="front">
                                     <img src="./img/headline.png" alt="a photo for HeadLine Nes">
