--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/php/todolist">
+                    <a target="_blank" href="https://github.com/wzlwit/php/tree/master/todolist">
                         <div class="card">
                             <div class="front">
                                 <img src="./img/todo.png" alt="a photo for Todo List">
@@ -572,7 +572,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card-container">
-                        <a target="_blank" href="https://wzlwit.github.io/elfwings/headlinenews">
+                        <a target="_blank" href="https://github.com/wzlwit/php/tree/master/todolist">
                             <div class="card">
                                 <div class="front">
                                     <img src="./img/todo.png" alt="a photo for Todo List">
