--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <!-- words animation -->
             <div class="drop-words">
                 <pre>Java</pre>
+                <pre>C#.Net</pre>
                 <pre> JS </pre>
-                <pre>Html</pre>
                 <pre>CSS</pre>
                 <pre>SQL</pre>
                 <pre>PHP</pre>
