--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
 
         <!-- menu-->
         <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownmenuBEndutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownmenuBEndutton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-bars"></i>
             </button>
             <div class="dropdown-menu" End aria-labelledby="dropdownmenuBEndutton">
                 <a class="scroll dropdown-item" href="#home"><i class="fa fa-home"></i><span> Home</span></a>
                 <a class="scroll dropdown-item" href="#about"><i class="fa fa-info"></i><span> About</span></a>
-                <a class="scroll dropdown-item" href="#gallery"><i class="fa fa-picture-o"></i><span> Portfolio</span></a>
+                <a class="scroll dropdown-item" href="#gallery"><i class="fa fa-picture-o"></i><span>
+                        Portfolio</span></a>
                 <a class="scroll dropdown-item" href="#skills"><i class="fa fa-bar-chart"></i><span> Skills</span></a>
-                <a class="scroll dropdown-item" href="#experience"><i class="fa fa-university"></i><span> Experience</span></a>
+                <a class="scroll dropdown-item" href="#experience"><i class="fa fa-university"></i><span>
+                        Experience</span></a>
                 <a class="scroll dropdown-item" href="#stats"><i class="fa fa-laptop"></i><span> Achievements</span></a>
                 <a class="scroll dropdown-item" href="#education"><i class="fa fa-book"></i><span> Education</span></a>
                 <a class="scroll dropdown-item" href="#contact"><i class="fa fa-phone"></i><span> Contact Me</span></a>
@@ -129,7 +132,8 @@
                                 <tr>
                                     <td><i class="fa fa-envelope"></i></td>
                                     <td> Email:</td>
-                                    <td><a href="mailto:wangzl.wit@gmail.com" target="_blank">wangzl.wit@gmail.com</a></td>
+                                    <td><a href="mailto:wangzl.wit@gmail.com" target="_blank">wangzl.wit@gmail.com</a>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td><i class="fa fa-github"></i></td>
@@ -139,11 +143,13 @@
                                 <tr>
                                     <td><i class="fa fa-linkedin"></i></td>
                                     <td> Linkin</td>
-                                    <td><a href="https://www.linkedin.com/in/wzl" target="_blank">linkedin.com/in/wzl</a></td>
+                                    <td><a href="https://www.linkedin.com/in/wzl"
+                                            target="_blank">linkedin.com/in/wzl</a></td>
                                 </tr>
                                 <tr style="height:3vw"></tr>
                                 <tr>
-                                    <td colspan="3"><a href="./CV_Zhaolong Wang_IT.pdf" target="_blank"><i class="fa fa-download"></i> Download CV</li></a></td>
+                                    <td colspan="3"><a href="./CV_Zhaolong Wang_IT.pdf" target="_blank"><i
+                                                class="fa fa-download"></i> Download CV</li></a></td>
                                 </tr>
                             </table>
                         </div>
@@ -217,7 +223,8 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/JavaScript/tree/master/React/ReduxThunk_Udemy/blog">
+                    <a target="_blank"
+                        href="https://github.com/wzlwit/JavaScript/tree/master/React/ReduxThunk_Udemy/blog">
                         <div class="card">
                             <div class="front">
                                 <img src="./img/ThunkBlog.png" alt="a photo for redux/thunk project">
@@ -380,7 +387,7 @@
                 </div>
             </div>
         </div>
-        <h4>Java</h4>
+        <h4>Java C#.Net</h4>
         <div class="row">
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
@@ -420,6 +427,26 @@
                     </a>
                 </div>
             </div>
+
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://bitbucket.org/wzlwit/dotnet">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/cnet.jpg" alt="a photo for C# and .Net">
+                            </div>
+                            <div class="cardback">
+                                <h4>C# .Net</h4>
+                                <ul>
+                                    <li>Advanced technology</li>
+                                    <li>C# and .Net projects</li>
+                                    <li>Complex Algrithm</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
         <!-- gallery slide -->
         <div id="gallery-slider" class="carousel slide" data-ride="carousel">
@@ -436,6 +463,7 @@
                 <li data-target="#gallery-slider" data-slide-to="9"></li>
                 <li data-target="#gallery-slider" data-slide-to="10"></li>
                 <li data-target="#gallery-slider" data-slide-to="11"></li>
+                <li data-target="#gallery-slider" data-slide-to="12"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -479,7 +507,8 @@
                 <div class="carousel-item">
                     <div class="card-container">
                         <div class="card">
-                            <a target="_blank" href="https://github.com/wzlwit/JavaScript/tree/master/React/ReduxThunk_Udemy/blog">
+                            <a target="_blank"
+                                href="https://github.com/wzlwit/JavaScript/tree/master/React/ReduxThunk_Udemy/blog">
                                 <div class="front">
                                     <img src="./img/ThunkBlog.png" alt="a photo for thunk project">
                                 </div>
@@ -675,6 +704,28 @@
                     </div>
 
                 </div>
+
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://bitbucket.org/wzlwit/dotnet">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/cnet.jpg" alt="a photo for C# and .Net">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Calculator</h4>
+                                    <ul>
+                                        <li>Advanced technology</li>
+                                        <li>C# and .Net projects</li>
+                                        <li>Complex Algrithm</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                </div>
+
             </div>
             <a class="carousel-control-prev" href="#gallery-slider" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -759,8 +810,10 @@
                 <!-- <p class="bar-p">Deep and thorough understanding about Programming and Database Management.</p> -->
 
                 <ul class="bar-ul">
-                    <li>Java: Generics, Inheritance, Polymorphosm, Data Structure (Array, List, Set, Map, Queue), Enum, Concurrency, I/O, JavaFX </li>
-                    <li>JavaScript: Promise, AJAX (XMLHttpRequest, Fetch, JQuery), React (state, props, design patterns), Express</li>
+                    <li>Java: Generics, Inheritance, Polymorphosm, Data Structure (Array, List, Set, Map, Queue), Enum,
+                        Concurrency, I/O, JavaFX </li>
+                    <li>JavaScript: Promise, AJAX (XMLHttpRequest, Fetch, JQuery), React (state, props, design
+                        patterns), Express</li>
                     <li>DBA: CRUD, DDL, DML, DCL, TCL, PL/SQL, APEX, MySql</li>
                     <li>PHP: Server side Rendering, Validation, Session, Queries</li>
                 </ul>
@@ -991,17 +1044,20 @@
         <h3 class="heading">Achievements</h3>
         <div class="row">
             <div class="col-md-3 col-sm-3 col-3 count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='36' data-delay='1' data-increment="1">56</div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='36' data-delay='1'
+                    data-increment="1">56</div>
                 <span></span>
                 <h6>Projects done</h6>
             </div>
             <div class="col-md-3 col-sm-3 col-3  count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='18' data-delay='1' data-increment="1">18</div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='18' data-delay='1'
+                    data-increment="1">18</div>
                 <span></span>
                 <h6>Courses finished</h6>
             </div>
             <div class="col-md-3 col-sm-3 col-3  count-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='15' data-delay='1' data-increment="1">15</div>
+                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='15' data-delay='1'
+                    data-increment="1">15</div>
                 <span></span>
                 <h6>Books read</h6>
             </div>
