--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="A resume for programmer and web Designer">
-    <meta name="keywords" content="My Career, Web Developer, Programmer, Responsive Web">
+    <meta name="description" content="A resume for programmer and web Designer, who makes things automated and better">
+    <meta name="keywords" content="My Career, Web Devsigner,Developer, Programmer, Responsive Web">
     <title>Developer and Web Designer</title>
 
     <link rel="stylesheet" href="./css/font-awesome.css"> <!-- fonts and icons -->
@@ -64,7 +64,8 @@
         <!-- banner -->
         <div class="banner">
             <h1>Zhaolong Wang</h1>
-            <h2>Developer <br> Web Designer </h2>
+            <!-- <h2>Developer <br> Web Designer </h2>-->
+            <h2>to be Better<br>&amp; Automated</h2>
 
             <!-- words animation -->
             <div class="drop-words">
